css/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');

:root {
    --color-accent: #FF6900;
    --color-white: #ffffff;
    --color-black: #1A1A1A;
    --color-grey: #cccccc;
    --color-green: #00732e;

    --font-weight-l: 700;
    --font-weight-m: 500;
    --font-weight-s: 400;

    --font-size-default: 16px;
    --font-size-s: 14px;
    --font-size-xs: 12px;
}

/* reset */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
/* reset imgs */
figure {
    display: inline-block;
}
img {
    display: block;
    max-width: 100%;
}
/* reset links */
a {
    text-decoration: none;
}


html {
    font-family: "Poppins", sans-serif;
}



/* link styles */
a {
    font-weight: var(--font-weight-m);
    font-size: var(--font-size-s);
}
header a {
    color: var(--color-white);
}


/* color classes */
.text-white {
    color: var(--color-white);
}
.bg-accent {
    background-color: var(--color-accent);
}
.bg-white {
    background-color: var(--color-white);
}
.text-grey {
    color: var(--color-grey);
}
.text-accent {
    color: var(--color-accent);
}

/* font classes */
.badge-text {
    font-size: var(--font-size-s);
    font-weight: var(--font-weight-m);
}
.text-xs {
    font-size: var(--font-size-xs);
    font-weight: var(--font-weight-s);
}
.product-title-text {
    font-size: var(--font-size-default);
    font-weight: var(--font-weight-m);
}

/* flex rules */
.flex {
    display: flex;
}
.flex-column {
    flex-direction: column;
}
.between {
    justify-content: space-between;
}
.flex-end {
    justify-content: flex-end;
}
.cross-axis-center {
    align-items: center;
}
.perfect-center {
    justify-content: center;
    align-items: center;
}
.wrap {
    flex-wrap: wrap;
    gap: 20px 12px;
}





/* header container */
.container-default {
    width: 80%;
    margin: 0 auto;
}

/* header */
header {
    padding: 12px 0;
}

/* header nav links */
header nav ul li{
    display: inline-block;
    padding: 4px 4px;
}

/* same dimensions for header boxes */
header .logo-box, header nav, header .link-icons-box {
    flex-basis: calc(100% / 3);
}

/* logo box */
.logo-box img {
    width: 100px;
}

/* header icons box */
header .link-icons-box figure {
    width: 24px;
    aspect-ratio: 1;
    padding: 4px;
}
/* header icons */
header .link-icons-box figure img {
    filter: invert(100%);
}

/* product card */
.product-card {
    flex-basis: calc(100% / 3);
}
/* vard img (relative) */
.product-card figure {
    position: relative;
}
.product-card .badge-box {
    position: absolute;
    left: 0;
    bottom: 20px;
    gap: 8px;
}
.product-card .favourite {
    position: absolute;
    right: 0;
    top: 8px;
    width: 28px;
    padding: 8px;
}
/* badge */
.badge {
    display: inline-block;
    padding: 4px 4px;
}
.badge.discount {
    background-color: var(--color-accent);
}
.badge.prod-green {
    background-color: var(--color-green);
}

/* card old price */
.old-price {
    text-decoration: line-through;
}

